--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -57,7 +57,10 @@ a {
   color: #fff;
   text-align: center;
   background-color: #159957;
-  background-image: url("images/soundwave.png"); }
+  background-image: url(https://upload.wikimedia.org/wikipedia/commons/4/42/Orchestra_hit.png);
+  background-size: 100% 100%;
+  padding: 100px;
+  background-repeat: no-repeat; }
 
 @media screen and (min-width: 64em) {
   .page-header {
