--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -56,7 +56,7 @@ a {
 .page-header {
   color: #fff;
   text-align: center;
-  background-color: #159957;
+  background-color: #09803F;
   background-image: url(https://upload.wikimedia.org/wikipedia/commons/4/42/Orchestra_hit.png);
   background-size: 100% 100%;
   padding: 100px;
